[project]
name = "agentic-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Krzysztof Kokot",email = "krzysiukokot@interia.pl"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "langchain-tavily (>=0.1.5,<0.2.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "tavily-python (>=0.7.8,<0.8.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

